监控/logging/loki/部署/线下/后端/kubernetes方式/2.0-loki.yaml
---
# 网络
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: logging-loki
  labels:
    app.kubernetes.io/name: loki
spec:
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: for-3100
      port: 80
      targetPort: 3100
    - name: for-7946
      port: 7946
      targetPort: 7946
    - name: for-9095
      port: 9095
      targetPort: 9095
  type: ClusterIP
---
# 服务
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: logging-loki
  labels:
    app.kubernetes.io/name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: loki
  serviceName: loki
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki
    spec:
      containers:
        - name: loki
          image: ctr-registry.local./ops/loki:2.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3100
            - containerPort: 7946
          args:
            - -config.file=/etc/loki/config.yaml
            - -target=all
          #          livenessProbe:
          #            tcpSocket:
          #              port: 3100
          #            failureThreshold: 10
          #            periodSeconds: 60
          #            initialDelaySeconds: 60
          volumeMounts:
            - mountPath: /loki/chunks
              name: loki-data
            - mountPath: /etc/loki
              name: loki-config
          resources:
            requests:
              cpu: 1000m
              memory: 1000Mi
              ephemeral-storage: 10Gi
            limits:
              cpu: 20000m
              memory: 10Gi
              ephemeral-storage: 200Gi
      volumes:
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki
        - name: loki-config
          configMap:
            name: loki
