监控/logging/loki/部署/线下/后端/kubernetes方式/2.1-loki-frontend.yaml
---
# 网络
apiVersion: v1
kind: Service
metadata:
  name: loki-frontend
  namespace: logging-loki
  labels:
    app.kubernetes.io/name: loki-frontend
spec:
  selector:
    app.kubernetes.io/name: loki-frontend
  ports:
    - name: for-3100
      port: 80
      targetPort: 3100
    - name: for-7946
      port: 7946
      targetPort: 7946
    - name: for-9095
      port: 9095
      targetPort: 9095
---
# 服务
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-frontend
  namespace: logging-loki
  labels:
    app.kubernetes.io/name: loki-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: loki-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki-frontend
    spec:
      containers:
        - name: loki-frontend
          image: ctr-registry.local./ops/loki:2.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3100
            - containerPort: 7946
          args:
            - -config.file=/etc/loki/config.yaml
            - -target=query-frontend
          volumeMounts:
            - mountPath: /etc/loki
              name: loki-config
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 5000m
              memory: 10Gi
              ephemeral-storage: 200Gi
      volumes:
        - name: loki-config
          configMap:
            name: loki
