监控/logging/loki/部署/线下/后端/kubernetes方式/(废弃)3-ingress.yaml

# 外网
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: logging-loki
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: loki.logging.local.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki
                port:
                  number: 80
